--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,104 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow fixed-top">
+  <h5 class="my-0 mr-md-auto font-weight-normal">Two-Party Escrow</h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-white" href="#">Intro</a>
+    <a class="p-2 text-white" href="#instructions">Instructions</a>
+    <a class="p-2 text-white" href="#escrow">Demo</a>
+  </nav>
+  <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
+<br>
+<br>
+<div class="section" id="story">
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">The Scenario!</h1>
+      <p>Car dealer sells Yemi a car for the amount of NGN2m under the condition that car dealer will return Yemi's funds if
+        the car develops issues after 3 days (Unlock period). Yemi does not completely trust car dealer, so she says she
+        will only pay the funds after 3 days.</p>
+      <p> To solve this issue, they set up an escrow that will ensure that </p>
+      <ul>
+        <li>Funds will only be released after 3 days to car dealer.</li>
+        <li>Yemi can get her money back on the 4th day if there are any issues</li>
+      </ul>
+      <p>These can be achieved through a smart contract. Lets see how below</p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="#instructions" role="button">Next &raquo;</a>
+      </p>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+<div class="" id="instructions">
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">How it Works!</h1>
+      <p>Next, we will see a demo that simulates this smart contract. The demo page consists of 4 vertical sections. The first
+        controls the demo and shows the logs while the others give the status of the accounts at each point in time.</p>
+      <p>
+        Things to Note:
+      </p>
+      <ul>
+        <li>
+          <b>Starting balance:</b> This is the balance that the source and target accounts are created with</li>
+        <li>
+          <b>Escrow Balance:</b> This is the balance that the escrow account is created with</li>
+        <li>
+          <b>Escrow Amount:</b> This is the amount that the source account funds the escrow account with</li>
+        <li>
+          <b>Unlock After:</b> The amount of seconds before the funds in escrow can be unlocked for the target account</li>
+        <li>
+          <b>Recover After:</b> The amount of seconds after which the funds in the escrow account is sent back to the source
+          account if it is unclaimed.</li>
+      </ul>
+
+      <p>Tasks</p>
+      <p>The following tasks will be performed</p>
+      <ul>
+
+        <li>
+          <b> Generate Keypairs:</b> Generate Stellar public and private keypairs for each account.
+        </li>
+        <li>
+          <b>Create Accounts:</b> Fund the accounts with their corresponding starting balances.</li>
+        <li>
+          <b>Enable Multisig:</b> Add target account as a signer to the escrow accounts.</li>
+        <li>
+          <b>Build Unlock Transaction:</b> Build the transaction to unlock the funds in the escrow. Note this transaction can
+          only be submitted after the unlock time has passed.</li>
+        <li>
+          <b>Build Recovery Transaction:</b> Build the transaction to recover the funds in the escrow if it remains unclaimed.
+          Note this transaction can only be submitted after the recovery time has passed.</li>
+        <li>
+          <b>Fund Escrow:</b> Send funds to the escrow account. Can be done multiple times.</li>
+        <li>
+          <b>Unlock Funds:</b> Run the unlock transaction built above</li>
+        <li>
+          <b>Recover Funds:</b> Run the recovery transaction built above</li>
+
+      </ul>
+      <p>
+        <a class="btn btn-primary btn-lg" href="#escrow" role="button">Start Demo &raquo;</a>
+      </p>
+    </div>
+  </div>
+
+</div>
+<br>
+<br>
 
 
-<app-escrow></app-escrow>
+<div class="section" id="escrow">
+  <br>
+  <br>
+  <div style="text-align:center">
+    <h3>
+      {{ title }}!
+    </h3>
+  </div>
+
+
+  <app-escrow id="escrow"></app-escrow>
+
+</div>
