--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+.border-top {
+  border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.section {
+  height: 90vh;
+}
+
+.btn-primary {
+  border-color: #2196F3;
+  background-color: #2196F3;
+}
+
+.fixed-top {
+  background-color:#2196F3!important;
+  color: #FFF;
+}
