draft 3 - getting there

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">How it Works!</h1>
-      <p>Next, we will see a demo that simulates this smart contract. The demo page consists of 4 vertical sections. The first
-        controls the demo and shows the logs while the others give the status of the accounts at each point in time.</p>
+      <p>Next, we will see a demo that simulates this smart contract. The demo page consists of 4 vertical sections. The first, controls the demo and shows its tasks. The bottom bar gives the status of the accounts at each point in time.</p>
       <p>
         Things to Note:
       </p>
