--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,24 @@
   background-color:#2196F3!important;
   color: #FFF;
 }
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 20px;
+  /* Margin bottom by footer height */
+}
+
+.footer {
+  position: absolute;
+  bottom: auto;
+  width: 100%;
+  height: 20px;
+  /* Set the fixed height of the footer here */
+  line-height: 20px;
+  /* Vertically center the text there */
+  /* background-color: #f5f5f5; */
+}
