--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,6 @@
     <a class="p-2 text-white" href="#instructions">Instructions</a>
     <a class="p-2 text-white" href="#escrow">Demo</a>
   </nav>
-  <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
 <br>
 <br>
@@ -14,11 +13,11 @@
     <div class="container">
       <h1 class="display-3">The Scenario!</h1>
       <p>Car dealer sells Tunde a car for the amount of NGN2m under the condition that car dealer will return Tunde's funds if
-        the car develops issues after 3 days (Unlock period). Tunde does not completely trust car dealer, so he says he will only pay the funds after 3 days.</p>
+        the car develops issues after 2 days (Unlock period). Tunde does not completely trust car dealer, so he says he will only pay the funds after 2 days.</p>
       <p> To solve this issue, they set up an escrow that will ensure that </p>
       <ul>
-        <li>Funds will only be released after 3 days to car dealer.</li>
-        <li>Tunde can get his money back on the 4th day if there are any issues</li>
+        <li>Funds will only be released after 2 days to car dealer.</li>
+        <li>Tunde can get his money back on the 3rd day if there are any issues</li>
       </ul>
       <p>These can be achieved through a smart contract. Lets see how below</p>
       <p>
@@ -40,10 +39,7 @@
       </h5>
       <ul>
         <li>
-          <b>Starting balance:</b> This is the balance that the source(Tunde) and target(Car dealer) accounts are created with
-        </li>
-        <li>
-          <b>Escrow Balance:</b> This is the balance that the escrow account is created with
+          <b>Starting balance:</b> This is the balance for all accounts(Tunde, Escrow and Car dealer).
         </li>
         <li>
           <b>Escrow Amount:</b> This is the amount that the source account funds the escrow account with
@@ -70,12 +66,12 @@
         <li>
           <b>Create Accounts:</b> Fund the accounts with their corresponding starting balances.</li>
         <li>
-          <b>Enable Multisig:</b> Add target account as a signer to the escrow accounts.</li>
+          <b>Parties Sign:</b> Add target account as a signer to the escrow accounts.</li>
         <li>
-          <b>Build Unlock Transaction:</b> Build the transaction to unlock the funds in the escrow. Note this transaction can
+          <b>Start Hold Period:</b> Build the transaction to unlock the funds in the escrow. Note this transaction can
           only be submitted after the unlock time has passed.</li>
         <li>
-          <b>Build Recovery Transaction:</b> Build the transaction to recover the funds in the escrow if it remains unclaimed.
+          <b>Start Refund Period:</b> Build the transaction to recover the funds in the escrow if it remains unclaimed.
           Note this transaction can only be submitted after the recovery time has passed.</li>
         <li>
           <b>Fund Escrow:</b> Send funds to the escrow account. Can be done multiple times.</li>
@@ -83,6 +79,7 @@
           <b>Unlock Funds:</b> Run the unlock transaction built above</li>
         <li>
           <b>Recover Funds:</b> Run the recovery transaction built above</li>
+        <li>Tasks below to be performed by escrow manager</li>
         <li>
           <b>Raise Dispute:</b> Stop the smart contract if any issues, then:
           <ul>
