--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,15 @@
 <div class="section" id="story">
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">The Scenario!</h1>
-      <p>Car dealer sells Tunde a car for the amount of NGN2m under the condition that car dealer will return Tunde's funds if
-        the car develops issues after 2 days (Unlock period). Tunde does not completely trust car dealer, so he says he will only pay the funds after 2 days.</p>
-      <p> To solve this issue, they set up an escrow that will ensure that </p>
+      <h2 class="display-3">The Scenario:</h2>
+      <p> A car dealer sells Tunde a car for 2m NGN. Tunde does not trust the car dealer so he decides to pay the car dealer 2 days after purchasing the car, if there are no issues. 
+      </p>
+      <p> To solve this issue, Tunde and the car dealer set up an escrow that ensures: </p>
       <ul>
-        <li>Funds will only be released after 2 days to car dealer.</li>
-        <li>Tunde can get his money back on the 3rd day if there are any issues</li>
+        <li>Funds will only be released to the car dealer after 2 days</li>
+        <li>Tunde can get his money back on the 3rd day if there are any issues with the car</li>
       </ul>
-      <p>These can be achieved through a smart contract. Lets see how below</p>
+      <p>These can be achieved through a smart contract. Let's walk through the parameters and steps below. </p>
       <p>
         <a class="btn btn-primary btn-lg" href="#instructions" role="button">Next &raquo;</a>
       </p>
