--- a/src/app/pages/account-detail/account-detail.component.html
+++ b/src/app/pages/account-detail/account-detail.component.html
@@ -7,7 +7,7 @@
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let b of account.balances">
         Balance:
-        <strong>NGN {{ b.balance | number:'1.2' }}m</strong>
+        <strong>{{assetCode}} {{ b.balance | number:'1.2' }}m</strong>
       </li>
       <li class="list-group-item" *ngFor="let b of account.balances">
         Number of Signers: {{account.signers.length}}
