--- a/src/app/pages/escrow/escrow.component.html
+++ b/src/app/pages/escrow/escrow.component.html
@@ -29,48 +29,48 @@
 
 
       <hr>
-      <h5>Tasks</h5>
-      <div class="list-group">
-        <button type="button" class="list-group-item list-group-item-action" (click)="generateAll()">
+      <h5>Tasks {{ progressCounter != 8 ? 'Pending' : 'Completed' }}</h5>
+      <div class="list-group" [ngSwitch]="progressCounter">
+        <button *ngSwitchCase="0" type="button" class="list-group-item list-group-item-action" (click)="generateAll()">
           Generate Keypairs
           <img *ngIf="tasks.generateKeypairs.active" src="assets/loader.gif">
           <span *ngIf="tasks.generateKeypairs.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.generateKeypairs.status, 'badge-danger':!tasks.generateKeypairs.status}">
             {{ tasks.generateKeypairs.status ? 'Complete' : 'Error' }}
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="createAccounts()">Create Accounts
+        <button *ngSwitchCase="1" type="button" class="list-group-item list-group-item-action" (click)="createAccounts()">Create Accounts
           <img *ngIf="tasks.createAccounts.active" src="assets/loader.gif">
           <span *ngIf="tasks.createAccounts.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.createAccounts.status, 'badge-danger':!tasks.createAccounts.status}">
             {{ tasks.createAccounts.status ? 'Complete' : 'Error' }}
           </span>
 
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="enableMultisig()">Parties Sign
+        <button *ngSwitchCase="2" type="button" class="list-group-item list-group-item-action" (click)="enableMultisig()">Parties Sign
           <img *ngIf="tasks.enableMultisig.active" src="assets/loader.gif">
           <span *ngIf="tasks.enableMultisig.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.enableMultisig.status, 'badge-danger':!tasks.enableMultisig.status}">
             {{ tasks.enableMultisig.status ? 'Complete' : 'Error' }}
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="unlockProcess()">Start Hold Period
+        <button *ngSwitchCase="3" type="button" class="list-group-item list-group-item-action" (click)="unlockProcess()">Start Hold Period
           <img *ngIf="tasks.buildUnlock.active" src="assets/loader.gif">
           <span *ngIf="tasks.buildUnlock.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.buildUnlock.status, 'badge-danger':!tasks.buildUnlock.status}">
             {{ tasks.buildUnlock.status ? 'Complete' : 'Error' }}
           </span>
 
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="recoveryProcess()">Start Refund Period
+        <button *ngSwitchCase="4" type="button" class="list-group-item list-group-item-action" (click)="recoveryProcess()">Start Refund Period
           <img *ngIf="tasks.buildRecovery.active" src="assets/loader.gif">
           <span *ngIf="tasks.buildRecovery.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.buildRecovery.status, 'badge-danger':!tasks.buildRecovery.status}">
             {{ tasks.buildRecovery.status ? 'Complete' : 'Error' }}
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="fundEscrow()">Fund Escrow
+        <button *ngSwitchCase="5" type="button" class="list-group-item list-group-item-action" (click)="fundEscrow()">Fund Escrow
           <img *ngIf="tasks.fundEscrow.active" src="assets/loader.gif">
           <span *ngIf="tasks.fundEscrow.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.fundEscrow.status, 'badge-danger':!tasks.fundEscrow.status}">
             {{ tasks.fundEscrow.status ? 'Complete' : 'Error' }}
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="runUnlockTx()">Unlock Funds
+        <button *ngSwitchCase="6" type="button" class="list-group-item list-group-item-action" (click)="runUnlockTx()">Unlock Funds
           <img *ngIf="tasks.runUnlock.active" src="assets/loader.gif">
           <span *ngIf="tasks.runUnlock.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.runUnlock.status, 'badge-danger':!tasks.runUnlock.status}">
             {{ tasks.runUnlock.status ? 'Complete' : 'Error' }}
@@ -80,7 +80,7 @@
           </span>
 
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="runRecoveryTx()">Recover Funds
+        <button *ngSwitchCase="6" type="button" class="list-group-item list-group-item-action" (click)="runRecoveryTx()">Recover Funds
           <img *ngIf="tasks.runRecovery.active" src="assets/loader.gif">
           <span *ngIf="tasks.runRecovery.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.runRecovery.status, 'badge-danger':!tasks.runRecovery.status}">
             {{ tasks.runRecovery.status ? 'Complete' : 'Error' }}
@@ -89,7 +89,7 @@
             {{recoverAfter}}s
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="raiseDispute()">Raise Dispute
+        <button *ngSwitchCase="6" type="button" class="list-group-item list-group-item-action" (click)="raiseDispute()">Raise Dispute
           <img *ngIf="tasks.raiseDispute.active" src="assets/loader.gif">
           <span *ngIf="tasks.raiseDispute.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.raiseDispute.status, 'badge-danger':!tasks.raiseDispute.status}">
             {{ tasks.raiseDispute.status ? 'Complete' : 'Error' }}
@@ -97,32 +97,27 @@
         </button>
       </div>
       <br>
-      <div class="list-group" *ngIf="tasks.raiseDispute.status">
+      <div class="list-group" *ngIf="tasks.raiseDispute.status" [ngSwitch]="progressCounter">
         <h6 class="text-info">
           <b>Tasks for Escrow Manager</b>
         </h6>
-        <button type="button" class="list-group-item list-group-item-action" (click)="paySource()">Pay Tunde
+        <button *ngSwitchCase="7" type="button" class="list-group-item list-group-item-action" (click)="paySource()">Pay Tunde
           <img *ngIf="tasks.paySource.active" src="assets/loader.gif">
           <span *ngIf="tasks.paySource.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.paySource.status, 'badge-danger':!tasks.paySource.status}">
             {{ tasks.paySource.status ? 'Complete' : 'Error' }}
           </span>
         </button>
-        <button type="button" class="list-group-item list-group-item-action" (click)="payTarget()">Pay Car Dealer
+        <button *ngSwitchCase="7" type="button" class="list-group-item list-group-item-action" (click)="payTarget()">Pay Car Dealer
           <img *ngIf="tasks.payTarget.active" src="assets/loader.gif">
           <span *ngIf="tasks.payTarget.completed" class="badge badge-pill" [ngClass]="{'badge-success': tasks.payTarget.status, 'badge-danger':!tasks.payTarget.status}">
             {{ tasks.payTarget.status ? 'Complete' : 'Error' }}
           </span>
         </button>
+        <!-- <button *ngSwitchCase="8" type="button" class="list-group-item list-group-item-action">
+          Demo Completed!!
+
+        </button> -->
       </div>
-
-      <!-- <hr>
-      <h6>Logs</h6>
-
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of logs.slice().reverse(); let i = index; first as isFirst" [ngClass]="{'isFirst': isFirst, 'isLast': !isFirst}">
-          {{ item }}
-        </li>
-      </ul> -->
 
     </div>
     <div class="col-sm-3">
