--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-white" href="#">Intro</a>
     <a class="p-2 text-white" href="#escrow">Demo</a>
+    <a class="p-2 text-white" href="https://github.com/lightyeario/escrow-demo" target="_blank">Github repo</a>
   </nav>
 </div>
 <br>
@@ -11,7 +12,8 @@
   <div class="jumbotron">
     <div class="container">
       <h2 class="display-3">The Scenario:</h2>
-      <p> A car dealer sells Tunde a car for 2m NGN. Tunde does not trust the car dealer so he decides to pay the car dealer 2 days after purchasing the car, if there are no issues. 
+      <p> A car dealer sells Tunde a car for 2m NGN. Tunde does not trust the car dealer so he decides to pay the car dealer
+        2 days after purchasing the car, if there are no issues.
       </p>
       <p> To solve this issue, Tunde and the car dealer set up an escrow that ensures: </p>
       <ul>
